fixes js DOM update bugs on ws events

--- a/Twitter.Web/Views/Home/Twitter.cshtml
+++ b/Twitter.Web/Views/Home/Twitter.cshtml
@@ -27,14 +27,12 @@
     </div>
     <div class="col-md-3">
         <h2>Notifications</h2>
-        <ul id="notifications">
-        </ul>
+        <ul id="notifications"></ul>
     </div>
     <div class="col-md-3">
         <h2>Firehose</h2>
         <button id="refreshAll">Refresh</button>
-        <ul id="firehose">
-        </ul>
+        <ul id="firehose"></ul>
     </div>
 </div>
 @section Scripts
